trunk/Archive2/bd/684bbcc8fa2f77/output
main.cpp:18:15: error: no viable conversion from 'i_t' (aka 'int') to 'struct <anonymous struct at main.cpp:18:5>'
    struct {} _ = i_t{};
              ^   ~~~~~
main.cpp:18:5: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'i_t' (aka 'int') to 'const <anonymous struct at main.cpp:18:5> &' for 1st argument
    struct {} _ = i_t{};
    ^             ~~~~~
main.cpp:18:5: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'i_t' (aka 'int') to '<anonymous struct at main.cpp:18:5> &&' for 1st argument
    struct {} _ = i_t{};
    ^             ~~~~~
1 error generated.
